# md-to-docx

./: .gitignore  LICENSE  README.md  pyproject.toml  to_docx.py
examples/: sample.txt
tests/: test_to_docx.py
